# smallbot-mcu-v3

./: .gitignore  CMakeLists.txt  Makefile  README.md
docs/: protocol.md
sdk/Debug/: debug.c
src/: batt.c  batt_adc.c  batt_adc.h  ch32v10x_conf.h  ch32v10x_it.c  ch32v10x_it.h  communication.c  communication.h  config.c  config.h  debug.c  debug.h  gpio.h  main.c  motor_control.c  motor_control.h  pid.c  pid.h  systick.c  systick.h
